Updates pseudo-selectors to use the standards-compliant double colon syntax.
We can change from single colons to double colons, as single colons were only needed for IE8 support.

Includes a temporary override of the GDS Stylelint configuration to not raise complaints about the use of double colons.

--- a/packages/govuk-frontend-review/src/stylesheets/partials/_app.scss
+++ b/packages/govuk-frontend-review/src/stylesheets/partials/_app.scss
@@ -26,7 +26,7 @@
 }
 
 // Removes the breakpoint sass-mq debug display
-.app-iframe-in-component-preview:before {
+.app-iframe-in-component-preview::before {
   display: none;
 }
 
