--- a/packages/govuk-frontend/src/govuk/helpers/_links.scss
+++ b/packages/govuk-frontend/src/govuk/helpers/_links.scss
@@ -412,7 +412,7 @@
     &[href^="/"],
     &[href^="http://"],
     &[href^="https://"] {
-      &:after {
+      &::after {
         content: " (" attr(href) ")";
         font-size: 90%;
 
