--- a/app/src/views/full-page-examples/make-a-payment/index.njk
+++ b/app/src/views/full-page-examples/make-a-payment/index.njk
@@ -1,7 +1,7 @@
 ---
 scenario: >-
   Things to try:
-  
+
   1. Enter a value and select ‘Continue’.
 
 ---
@@ -43,7 +43,7 @@ scenario: >-
       prefix: {
         text: "£"
       },
-      classes: "govuk-input--width-20 govuk-input--extra-letter-spacing",
+      classes: "govuk-input--width-5",
       id: "payment-amount",
       name: "payment-amount",
       spellcheck: false,
