--- a/app/src/views/full-page-examples/what-are-your-bank-details/index.njk
+++ b/app/src/views/full-page-examples/what-are-your-bank-details/index.njk
@@ -54,7 +54,7 @@ scenario: >-
           label: {
             text: "Sort code"
           },
-          classes: "govuk-input--width-5",
+          classes: "govuk-input--width-5 govuk-input--extra-letter-spacing",
           hint: {
             text: "Must be 6 digits long"
           },
@@ -69,7 +69,7 @@ scenario: >-
           label: {
             text: "Account number"
           },
-          classes: "govuk-input--width-10",
+          classes: "govuk-input--width-10 govuk-input--extra-letter-spacing",
           hint: {
             text: "Must be between 6 and 8 digits long"
           },
@@ -84,7 +84,7 @@ scenario: >-
           label: {
             text: "Building society roll number (if you have one)"
           },
-          classes: "govuk-input--width-10",
+          classes: "govuk-input--width-10 govuk-input--extra-letter-spacing",
           hint: {
             text: "You can find it on your card, statement or passbook"
           },
