--- a/app/src/views/full-page-examples/what-is-your-national-insurance-number/index.njk
+++ b/app/src/views/full-page-examples/what-is-your-national-insurance-number/index.njk
@@ -43,7 +43,7 @@ scenario: >-
       hint: {
         text: "It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’."
       },
-      classes: "govuk-input--width-10",
+      classes: "govuk-input--width-10 govuk-input--extra-letter-spacing",
       id: "national-insurance-number",
       name: "national-insurance-number",
       spellcheck: false,
