--- a/packages/govuk-frontend-review/src/views/layouts/legacy.njk
+++ b/packages/govuk-frontend-review/src/views/layouts/legacy.njk
@@ -8,7 +8,12 @@
 {% block cookie_message %}<p>GOV.UK uses cookies to make the site simpler. <a href="https://www.gov.uk/help/cookies">Find out more about cookies</a></p>{% endblock %}
 
 {% block head %}
-  <link rel="stylesheet" href="/stylesheets/app-legacy.min.css">
+  <!--[if !IE 8]><!-->
+    <link rel="stylesheet" href="/stylesheets/app-legacy.min.css">
+  <!--<![endif]-->
+  <!--[if IE 8]>
+    <link rel="stylesheet" href="/stylesheets/app-legacy-ie8.min.css">
+  <![endif]-->
 {% endblock %}
 
 {% block body_start %}
