--- a/packages/govuk-frontend/src/govuk/components/warning-text/_index.scss
+++ b/packages/govuk-frontend/src/govuk/components/warning-text/_index.scss
@@ -5,6 +5,10 @@
     padding: govuk-spacing(2) 0;
   }
 
+  .govuk-warning-text__assistive {
+    @include govuk-visually-hidden;
+  }
+
   .govuk-warning-text__icon {
     @include govuk-font($size: false, $weight: bold);
 
