--- a/packages/govuk-frontend/src/govuk/components/button/_index.scss
+++ b/packages/govuk-frontend/src/govuk/components/button/_index.scss
@@ -67,6 +67,10 @@ $govuk-button-text-colour: govuk-colour("white") !default;
     cursor: pointer;
     -webkit-appearance: none;
 
+    @include _govuk-if-ie8 {
+      border-bottom: $button-shadow-size solid $govuk-button-shadow-colour;
+    }
+
     @include govuk-media-query($from: tablet) {
       width: auto;
     }
@@ -93,11 +97,26 @@ $govuk-button-text-colour: govuk-colour("white") !default;
     &:active {
       // Bump the button down so it looks like its being pressed in
       top: $button-shadow-size;
+
+      @include _govuk-if-ie8 {
+        border-bottom-width: 0;
+      }
     }
 
     &:focus {
       border-color: $govuk-focus-colour;
-      outline: $govuk-focus-width solid transparent;
+      // When colours are overridden, for example when users have a dark mode,
+      // backgrounds and box-shadows disappear, so we need to ensure there's a
+      // transparent outline which will be set to a visible colour.
+      // Since Internet Explorer 8 does not support box-shadow, we want to force the user-agent outlines
+      @include _govuk-not-ie8 {
+        outline: $govuk-focus-width solid transparent;
+      }
+      // Since Internet Explorer does not support `:not()` we set a clearer focus style to match user-agent outlines.
+      @include _govuk-if-ie8 {
+        color: $govuk-focus-text-colour;
+        background-color: $govuk-focus-colour;
+      }
       box-shadow: inset 0 0 0 1px $govuk-focus-colour;
     }
 
@@ -124,7 +143,7 @@ $govuk-button-text-colour: govuk-colour("white") !default;
 
     // Use a pseudo element to expand the click target area to include the
     // button's shadow as well, in case users try to click it.
-    &::before {
+    &:before {
       content: "";
       display: block;
 
@@ -148,7 +167,7 @@ $govuk-button-text-colour: govuk-colour("white") !default;
     // the click event is still fired.
     //
     // 🎉
-    &:active::before {
+    &:active:before {
       top: -($govuk-border-width-form-element + $button-shadow-size);
     }
   }
@@ -164,6 +183,9 @@ $govuk-button-text-colour: govuk-colour("white") !default;
     &:active {
       top: 0;
       box-shadow: 0 $button-shadow-size 0 $govuk-button-shadow-colour; // s0
+      @include _govuk-if-ie8 {
+        border-bottom: $button-shadow-size solid $govuk-button-shadow-colour; // s0
+      }
     }
   }
 
