--- a/packages/govuk-frontend/src/govuk/components/details/_index.scss
+++ b/packages/govuk-frontend/src/govuk/components/details/_index.scss
@@ -53,7 +53,7 @@
   }
 
   // Append our own open / closed marker using a pseudo-element
-  .govuk-details__summary::before {
+  .govuk-details__summary:before {
     content: "";
     position: absolute;
 
