--- a/packages/govuk-frontend/src/govuk/components/input/_index.scss
+++ b/packages/govuk-frontend/src/govuk/components/input/_index.scss
@@ -32,6 +32,12 @@
       // it will change the element size. Also, `outline` cannot be utilised
       // here as it is already used for the yellow focus state.
       box-shadow: inset 0 0 0 $govuk-border-width-form-element;
+
+      @include _govuk-if-ie8 {
+        // IE8 doesn't support `box-shadow` so double the border with
+        // `border-width`.
+        border-width: $govuk-border-width-form-element * 2;
+      }
     }
 
     &:disabled {
@@ -162,7 +168,9 @@
       border-bottom: 0;
     }
     @include govuk-media-query($from: mobile) {
-      border-right: 0;
+      @include _govuk-not-ie8 {
+        border-right: 0;
+      }
     }
   }
 
@@ -172,7 +180,9 @@
       border-top: 0;
     }
     @include govuk-media-query($from: mobile) {
-      border-left: 0;
+      @include _govuk-not-ie8 {
+        border-left: 0;
+      }
     }
   }
 }
