--- a/packages/govuk-frontend/src/govuk/helpers/_focused.scss
+++ b/packages/govuk-frontend/src/govuk/helpers/_focused.scss
@@ -14,7 +14,11 @@
   // backgrounds and box-shadows disappear, so we need to ensure there's a
   // transparent outline which will be set to a visible colour.
 
-  outline: $govuk-focus-width solid transparent;
+  // Since Internet Explorer 8 does not support box-shadow, we want to force the
+  // user-agent outlines
+  @include _govuk-not-ie8 {
+    outline: $govuk-focus-width solid transparent;
+  }
   color: $govuk-focus-text-colour;
   background-color: $govuk-focus-colour;
   box-shadow: 0 -2px $govuk-focus-colour, 0 4px $govuk-focus-text-colour;
