--- a/packages/govuk-frontend/src/govuk/objects/_width-container.scss
+++ b/packages/govuk-frontend/src/govuk/objects/_width-container.scss
@@ -67,6 +67,14 @@
       margin-left: auto;
     }
   }
+
+  @include _govuk-if-ie8 {
+    width: $width;
+    // Since media queries are not supported in IE8,
+    // we need to duplicate this margin that centers the page.
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
 
 @include govuk-exports("govuk/objects/width-container") {
