--- a/app/src/views/full-page-examples/index.njk
+++ b/app/src/views/full-page-examples/index.njk
@@ -16,7 +16,7 @@
 
     <p class="govuk-body-l">These examples are designed to test the styles, components and patterns from GOV.UK Frontend in a realistic context. This index page does not need to be audited.</p>
 
-    <p class="govuk-body">Examples within this first section will only be one page unless otherwise stated. These examples will have links and buttons that won’t do anything, or will lead to unexpected errors.</p> 
+    <p class="govuk-body">Examples within this first section will only be one page unless otherwise stated. These examples will have links and buttons that will not do anything, or will lead to unexpected errors.</p> 
 
     <p class="govuk-body">The examples that have multiple pages will have some links and buttons that work as well as use some rudimentary validation. They will usually only have 1 error message example per input.</p>
 
