--- a/app/src/views/full-page-examples/index.njk
+++ b/app/src/views/full-page-examples/index.njk
@@ -52,7 +52,7 @@
     <h3 class="govuk-heading-m"><a href="https://alphagov.github.io/accessible-autocomplete/examples/form.html" class="govuk-link">Accessible autocomplete example</a></h3>
 
     <div class="app-prose-scope">
-      <p>This is an example of an autocomplete input, things to try:</p>
+      <p>This is an example of an autocomplete input. Things to try:</p>
       <ol>
         <li>Select the last location you visited.</li>
         <li>Select a location on a passport.</li>
@@ -108,7 +108,7 @@
     <h3 class="govuk-heading-m"><a href="https://www.gov.uk/visit-uk-business-trip" class="govuk-link">Step-by-step navigation example</a></h3>
     
     <div class="app-prose-scope">
-      <p>This is an example of Step-by-step navigation used to help visitors entering the UK on a business trip.</p>
+      <p>This is an example of Step-by-step navigation used to help visitors entering the UK on a business trip. Things to try:</p>
       <ol>
         <li>Check if you can bring an animal with you.</li>
       </ol>
