Heading structure changes

--- a/app/src/views/full-page-examples/index.njk
+++ b/app/src/views/full-page-examples/index.njk
@@ -11,11 +11,13 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">
-      Full page examples
+      DAC audit May 2023 examples
     </h1>
 
     <p class="govuk-body-l">These examples are designed to test the styles, components and patterns from GOV.UK Frontend in a realistic context. This index page does not need to be audited.</p>
 
+    <h2 class="govuk-heading-l">Full page examples</h2>
+    
     <p class="govuk-body">Examples within this first section will only be one page unless otherwise stated. These examples will have links and buttons that will not do anything, or will lead to unexpected errors.</p> 
 
     <p class="govuk-body">The examples that have multiple pages will have some links and buttons that work as well as use some rudimentary validation. They will usually only have 1 error message example per input.</p>
