--- a/src/govuk/components/summary-list/_index.scss
+++ b/src/govuk/components/summary-list/_index.scss
@@ -172,7 +172,7 @@
 
     // Ensures the card header appears separate to the summary list in forced colours mode
     border-bottom: 1px solid transparent;
-    background-color: govuk-colour("light-grey", $legacy: "grey-3");
+    background-color: govuk-colour("light-grey");
 
     @include govuk-media-query($from: "tablet") {
       display: flex;
