--- a/packages/govuk-frontend/src/govuk/components/button/_index.scss
+++ b/packages/govuk-frontend/src/govuk/components/button/_index.scss
@@ -7,7 +7,7 @@
 /// @type Colour
 /// @access public
 
-$govuk-button-background-colour: govuk-colour("green", $legacy: #00823b) !default;
+$govuk-button-background-colour: govuk-colour("green") !default;
 
 /// Button component text colour
 ///
@@ -23,7 +23,7 @@ $govuk-button-text-colour: govuk-colour("white") !default;
   $govuk-button-shadow-colour: govuk-shade($govuk-button-colour, 60%);
 
   // Secondary button variables
-  $govuk-secondary-button-colour: govuk-colour("light-grey", $legacy: "grey-3");
+  $govuk-secondary-button-colour: govuk-colour("light-grey");
   $govuk-secondary-button-text-colour: govuk-colour("black");
   $govuk-secondary-button-hover-colour: govuk-shade($govuk-secondary-button-colour, 10%);
   $govuk-secondary-button-shadow-colour: govuk-shade($govuk-secondary-button-colour, 40%);
