--- a/packages/govuk-frontend/src/govuk/components/footer/_index.scss
+++ b/packages/govuk-frontend/src/govuk/components/footer/_index.scss
@@ -2,18 +2,7 @@
 
   $govuk-footer-background: $govuk-canvas-background-colour;
   $govuk-footer-border: $govuk-border-colour;
-  // This variable can be removed entirely once the legacy palette goes away,
-  // as it'll just be the same as $govuk-footer-border.
-  $govuk-footer-border-top: $govuk-border-colour;
   $govuk-footer-text: $govuk-text-colour;
-  $govuk-footer-link-hover-colour: null; // Only used with the legacy palette
-
-  @if $govuk-use-legacy-palette {
-    $govuk-footer-border-top: #a1acb2;
-    $govuk-footer-border: govuk-colour("grey-2");
-    $govuk-footer-text: #454a4c;
-    $govuk-footer-link-hover-colour: #171819;
-  }
 
   // Based on the govuk-crest-2x.png image dimensions.
   $govuk-footer-crest-image-width-2x: 250px;
@@ -27,27 +16,14 @@
     @include govuk-responsive-padding(7, "top");
     @include govuk-responsive-padding(5, "bottom");
 
-    border-top: 1px solid $govuk-footer-border-top;
+    border-top: 1px solid $govuk-footer-border;
     color: $govuk-footer-text;
     background: $govuk-footer-background;
   }
 
   .govuk-footer__link {
     @include govuk-link-common;
-
-    @if $govuk-use-legacy-palette {
-      &:link,
-      &:visited {
-        color: $govuk-footer-text;
-      }
-
-      &:hover,
-      &:active {
-        color: $govuk-footer-link-hover-colour;
-      }
-    } @else {
-      @include govuk-link-style-text;
-    }
+    @include govuk-link-style-text;
 
     // alphagov/govuk_template includes a specific a:link:focus selector
     // designed to make unvisited links a slightly darker blue when focussed, so
