Add new brand colour for DSIT

--- a/packages/govuk-frontend/src/govuk/settings/_colours-organisations.scss
+++ b/packages/govuk-frontend/src/govuk/settings/_colours-organisations.scss
@@ -61,6 +61,9 @@ $govuk-colours-organisations: (
   "department-for-levelling-up-housing-and-communities": (
     colour: #012169,
   ),
+  "department-for-science-innovation-and-technology": (
+    colour: #045f71
+  ),
   "department-for-transport": (
     colour: #006c56,
     colour-websafe: #398373
