Enable new link styles by default
In July 2021, we made some improvements to new link styles [1] which were released as part of v3.12.0.

We introduced these changes behind a feature flag `$govuk-new-link-styles: true` which service teams needed to set before importing GOV.UK Frontend in order to opt-in.

This was in case users:

- needed to make changes to their service to introduce these new link styles consistently
- wanted to avoid opting in if they have links within a multiple-column layout in your CSS, due to Known issue: hover state is mis-painted on links within CSS multiple-column layouts #2204

Now that #2204 has been fixed in Chromium, we can make the new link styles ‘opt-out’.

[1]: https://github.com/alphagov/govuk-frontend/issues/2350

--- a/packages/govuk-frontend/src/govuk/settings/_links.scss
+++ b/packages/govuk-frontend/src/govuk/settings/_links.scss
@@ -10,16 +10,10 @@
 /// - have a clearer hover state, where the underline gets thicker to make the
 ///   link stand out to users
 ///
-/// You should only enable the new link styles if both:
-///
-/// - you've made sure your whole service will use the new style consistently
-/// - you do not have links in a multi-column CSS layout - there's [a Chromium
-///   bug that affects links](https://github.com/alphagov/govuk-frontend/issues/2204)
-///
 /// @type Boolean
 /// @access public
 
-$govuk-new-link-styles: false !default;
+$govuk-new-link-styles: true !default;
 
 /// Thickness of link underlines
 ///
