--- a/packages/govuk-frontend-review/src/views/examples/template-custom/index.njk
+++ b/packages/govuk-frontend-review/src/views/examples/template-custom/index.njk
@@ -84,7 +84,7 @@
     html: 'C\'est un nouveau service - vos <a class="govuk-link" href="#">commentaires</a> nous aideront à l\'améliorer.'
   }) }}
   {{ govukBackLink({
-    href: "/" + legacyQuery
+    href: "/"
   }) }}
   <!-- endblock:beforeContent -->
 {% endblock %}
