--- a/packages/govuk-frontend/src/govuk/settings/_warnings.scss
+++ b/packages/govuk-frontend/src/govuk/settings/_warnings.scss
@@ -45,9 +45,17 @@ $govuk-suppressed-warnings: () !default;
 /// @access private
 
 @mixin _warning($key, $message) {
-  @if not index($govuk-suppressed-warnings, $key) {
-    @warn $message + " To silence this warning, update $govuk-suppressed-warnings " +
-      "with key: \"#{$key}\"";
+  @if _should-warn($key) {
+    @warn _warning-text($key, $message);
     $govuk-suppressed-warnings: append($govuk-suppressed-warnings, $key) !global;
   }
+}
+
+@function _should-warn($key) {
+  @return index($govuk-suppressed-warnings, $key) == null;
+}
+
+@function _warning-text($key, $message) {
+  @return $message + " To silence this warning, update $govuk-suppressed-warnings " +
+    "with key: \"#{$key}\"";
 }
